# docs_test

./: pyproject.toml  setup.cfg
src/docstest/: docstest.py
