[metadata]
name = docstest
description = ...
long_description = ...
keywords = ...
license = ...
url = ...
author = ...
author_email = ...
maintainer = ...
maintainer_email = ...

[options]
package_dir =
  =src
packages = find:
python_requires = >=3.8
install_requires =
  ipython

[options.packages.find]
where = src
